/*
 * $Id: ChangeLog,v 1.1489 2003/09/17 12:45:09 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-09-17 10:46 UTC-0300 Antonio Carlos Pantaglione <toninho@fwi.com.br>
  * source/rtl/memoedit.prg
    ! clipper compatibility if user function is passed as ""

2003-09-17 14:42 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/make_rpm.sh
  * xharbour/xharbour.spec
    ! fixes for buggy RPM - automatic _topdir detection

2003-09-17 08:50 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/filesys.c
    ! fixed error (set to 0) in fsCreate if creation is sucessful.
    ! little change in fsClose.

2003-09-16 08:50 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.slx
    + Aded GET support to HB_In logic.

  * source/rtl/filesys.c
    + Added few missing HB_THREAD_STUB

2003-16-09 09:40 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  + make_deb.sh
    ! Build an debian package
  + debian/*
    ! Files need to build an debian package

  Notice , I don't to see this files on harbour repository, it give to me many
  work to has this work properly

2003-15-09 23:15 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * make_rpm.sh
    * Fixed when conectiva is used (now build properly on both root/non root acount)
  * ChangeLog
    ! Renamed to ChangeLog.016 and Start an New One