@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1489 2003/09/17 12:45:09 druzus Exp $
+ * $Id: ChangeLog,v 1.1490 2003/09/17 13:45:33 toninhofwi Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-09-18 15:45 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
+  * tests/Makefile
+    ! added gtcgi to compilation if user selects HB_GT_LIB=gtcgi
+
+  * source/rtl/hbservice.c
+    ! Multithread compliancy under pthreads (unix/linux)
 
 2003-09-17 10:46 UTC-0300 Antonio Carlos Pantaglione <toninho@fwi.com.br>
   * source/rtl/memoedit.prg
